Version 0.9.2 alpha (no binary release):
    * Fixing Java Indentation and Un-Indentattion Actions
    * Added and used (in the Tester) clearUndoes on the SyntaxDocument
    * Added Basic JFlex Syntax
    * Added getContentTypes to DefaultSyntaxKit to get all registered
      ContentTypes.  This is now also used in the SyntaxTester instead of
      hardcoding the types.
    * Cleanup and optimization of Lexers by removing duplicate Java Code
      (replaced with Regex OR)
    * Removed calls to deprecated calls in SyntaxView
    * Modified the SyntaxDOcument to override the fireXXX methods and parse
      the document at that time instead of overriding the inserUpdate method.
      This fixes issue 24.
    * Added Groovy GString expression highlights
    * Removed getLanguages method from Lexer interface and implementations.
Version 0.9.1
    * Fixed empty strings in XML syntax  Issue 29
    * Fixed TAL lexer using incorrect package name
Version 0.9.0
    * Initial version after major overhaul