@@ -13,7 +13,10 @@
  */
 package jsyntaxpane.syntaxkits;
 
-import jsyntaxpane.DefaultSyntaxKit; 
+import javax.swing.KeyStroke;
+import javax.swing.text.Keymap;
+import jsyntaxpane.DefaultSyntaxKit;
+import jsyntaxpane.SyntaxActions;
 import jsyntaxpane.lexers.JFlexLexer;
 
 /**
@@ -24,5 +27,11 @@ public class JFlexSyntaxKit extends DefaultSyntaxKit {
 
     public JFlexSyntaxKit() {
         super(new JFlexLexer());
+    }
+
+    @Override
+    public void addKeyActions(Keymap map) {
+        super.addKeyActions(map);
+        map.addActionForKeyStroke(KeyStroke.getKeyStroke("ENTER"), SyntaxActions.JAVA_INDENT);
     }
 }
