@@ -13,8 +13,13 @@
  */
 package jsyntaxpane.syntaxkits;
 
+import java.util.Map;
+import javax.swing.KeyStroke;
+import javax.swing.text.Keymap;
 import jsyntaxpane.DefaultSyntaxKit;
+import jsyntaxpane.SyntaxActions;
 import jsyntaxpane.lexers.JavaLexer;
+import jsyntaxpane.util.JarServiceProvider;
 
 /**
  *
@@ -24,5 +29,19 @@ public class JavaSyntaxKit extends DefaultSyntaxKit {
 
     public JavaSyntaxKit() {
         super(new JavaLexer());
+    }
+
+    @Override
+    public void addKeyActions(Keymap map) {
+        super.addKeyActions(map);
+        map.addActionForKeyStroke(KeyStroke.getKeyStroke("ENTER"), SyntaxActions.JAVA_INDENT);
+        map.addActionForKeyStroke(KeyStroke.getKeyStroke("control SPACE"),
+            new SyntaxActions.MapCompleteAction(COMPLETIONS));
+    }
+
+    public static Map<String, String> COMPLETIONS;
+
+    static {
+        COMPLETIONS = JarServiceProvider.readStringsMap("jsyntaxpane.javasyntaxkit.completions");
     }
 }
