@@ -15,14 +15,8 @@
 package jsyntaxpane.lexers;
 
 import jsyntaxpane.DefaultLexer;
-import jsyntaxpane.util.JarServiceProvider;
 import jsyntaxpane.Token;
 import jsyntaxpane.TokenType;
-import javax.swing.KeyStroke;
-import javax.swing.text.Keymap;
-import jsyntaxpane.SyntaxActions;
-import java.util.Map;
-import java.util.HashMap;
  
 %% 
 
@@ -46,17 +40,6 @@ import java.util.HashMap;
 
     private Token token(TokenType type) {
         return new Token(type, yychar, yylength());
-    }
-
-    // These will be used to store Token Start positions and length for Complex 
-    // Tokens that need deifferent Lexer States, like STRING
-    int tokenStart;
-    int tokenLength;
-
-    @Override
-    public void addKeyActions(Keymap map) {
-        super.addKeyActions(map);
-        map.addActionForKeyStroke(KeyStroke.getKeyStroke("ENTER"), SyntaxActions.JAVA_INDENT);
     }
 
 %}
